--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,7 @@ jobs:
         run: dotnet build --configuration Release --no-restore
 
       - name: Pack NuGet Package
-        run: dotnet pack --configuration Release --no-build --output ${{ env.NuGetDirectory }}
+        run: dotnet pack --configuration Release --no-build --output ${{ vars.NuGetDirectory }}
 
       - name: Push NuGet Package to GitHub Packages
-        run: dotnet nuget push ${{ env.NuGetDirectory }}/*.nupkg --source "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json" --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
+        run: dotnet nuget push ${{ vars.NuGetDirectory }}/*.nupkg --source "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json" --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
