--- a/src/SharedKernel/SharedKernel.csproj
+++ b/src/SharedKernel/SharedKernel.csproj
@@ -5,14 +5,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
-    <PackageId>TheTemplate.SharedKernel.2025.03.03.20.58.07</PackageId>
+    <PackageId>minhsangdotcom.TheTemplate.SharedKernel</PackageId>
     <Version>1.0.0</Version>
     <Authors>Tran Minh Sang</Authors>
     <Company>minhsangdotcom</Company>
     <PackageTags>csharp, nuget, clean architecture, code base</PackageTags>
     <Description>Default stuff for clean architecture template</Description>
-    <RepositoryUrl>https://github.com/minhsangdotcom/The-Template_Shared-kernel</RepositoryUrl>
-    <PublishRepositoryUrl>true</PublishRepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
