add crypto extension

--- a/src/SharedKernel/SharedKernel.csproj
+++ b/src/SharedKernel/SharedKernel.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BouncyCastle.Cryptography" Version="2.5.1" />
     <PackageReference Include="CaseConverter" Version="2.0.1" />
     <PackageReference Include="Ulid" Version="1.3.4" />
   </ItemGroup>
