--- a/src/SharedKernel/SharedKernel.csproj
+++ b/src/SharedKernel/SharedKernel.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
 
     <PackageId>minhsangdotcom.TheTemplate.SharedKernel</PackageId>
-    <Version>1.0.2</Version>
+    <Version>1.0.3-alpha</Version>
     <Authors>Tran Minh Sang</Authors>
     <Company>minhsangdotcom</Company>
     <PackageTags>csharp, nuget, clean architecture, code base</PackageTags>
