--- a/src/SharedKernel/SharedKernel.csproj
+++ b/src/SharedKernel/SharedKernel.csproj
@@ -6,17 +6,19 @@
     <Nullable>enable</Nullable>
 
     <PackageId>minhsangdotcom.TheTemplate.SharedKernel</PackageId>
-    <Version>1.0.3-alpha</Version>
+    <Version>1.0.3</Version>
     <Authors>Tran Minh Sang</Authors>
     <Company>minhsangdotcom</Company>
     <PackageTags>csharp, nuget, clean architecture, code base</PackageTags>
-    <Description>Default stuff for clean architecture template</Description>
+    <RepositoryUrl>https://github.com/minhsangdotcom/elasticsearch-fluent-configuration</RepositoryUrl>
+    <PackageReadmeFile>README-NUGET.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="BouncyCastle.Cryptography" Version="2.5.1" />
     <PackageReference Include="CaseConverter" Version="2.0.1" />
     <PackageReference Include="Ulid" Version="1.3.4" />
+    <None Include="../../README-NUGET.md" Pack="true" PackagePath="" />
   </ItemGroup>
 
 </Project>
