--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,8 @@ bld/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
+src/Tests/
+
 # Visual Studio 2017 auto generated files
 Generated\ Files/
 
@@ -385,8 +387,8 @@ FodyWeavers.xsd
 # VS Code files for those working on multiple tools
 .vscode/*
 !.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
+.vscode/tasks.json
+.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
 
