--- a/src/SharedKernel/SharedKernel.csproj
+++ b/src/SharedKernel/SharedKernel.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="BouncyCastle.Cryptography" Version="2.5.1" />
     <PackageReference Include="CaseConverter" Version="2.0.1" />
     <PackageReference Include="deniszykov.TypeConversion" Version="3.2.3" />
+    <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.21" />
     <PackageReference Include="Ulid" Version="1.4.1" />
     <None Include="../../README-NUGET.md" Pack="true" PackagePath="" />
   </ItemGroup>
